# rs_voice_controller

./: .gitignore  Cargo.toml  EXAMPLE.env  README.md
migrations/2024-03-13-072736_voices_info/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  structs.rs  utils.rs
src/events/: mod.rs  ready.rs  voice_state.rs  voice_state_updated_connect.rs  voice_state_updated_disconnect.rs
src/threads/: mod.rs  voice_existing_checker.rs
