[package]
name = "rs_voice_controller"
version = "0.1.0"
edition = "2021"  
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
diesel = { version = "2.1.4", features = ["sqlite"] }
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
