[package]
name = "rs_voice_controller"
version = "0.1.0"
edition = "2021"  
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
sqlx = {version = "0.7.4", features = ["runtime-tokio", "sqlite"]}
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
