[package]
name = "rs_voice_controller"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite"]}
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rand = "0.9.1"
